# omni-run

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  demo_autofix.py  omni_run.py  pyproject.toml  requirements.txt  roadmap.md  setup.py  smart_launcher.py
examples/: README.md
examples/flask_app/: app.py
examples/go_app/: go.mod  main.go
examples/node_app/: package.json  server.js
tests/: TEST_PLAN.md  conftest.py  test_autofix.py  test_cli_config.py  test_dependencies.py  test_discovery.py  test_environments.py  test_execution.py  test_frameworks.py  test_reports.py
